# glerminal

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ISSUE_TEMPLATE.md  LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md
examples/: example.rs  input.rs  menu_systems.rs  menu_systems_grid.rs  menu_systems_parser.rs  multiple_text_buffers.rs  performance_tester.rs  text_buffer.rs  text_parser.rs  window.rs
fonts/: iosevka.sfl  source_code_pro.sfl  vcr_osd_mono_regular.sfl  vcr_osd_mono_regular_48.sfl
src/: display.rs  events.rs  font.rs  input.rs  lib.rs  main.rs  parser.rs  renderable.rs  renderer.rs  sfl_parser.rs  terminal.rs  text_buffer.rs
src/menu_systems/: button.rs  checkbox.rs  dialog.rs  menu.rs  menu_switcher.rs  mod.rs  text_input.rs  text_item.rs  text_label.rs  window.rs
src/renderer/: backgroundmesh.rs  mod.rs  renderable.rs  renderer.rs  textbuffermesh.rs
src/shaders/: bg_frag_shader.glsl  debug_frag_shader.glsl  frag_shader.glsl  vert_shader.glsl
src/tests/: events.rs  font.rs  input.rs  mod.rs  parser.rs  terminal.rs  text_buffer.rs
src/tests/menu_systems/: checkbox.rs  dialog.rs  menu.rs  mod.rs  text_input.rs  text_item.rs
src/text_buffer/: mod.rs  parser.rs  text_processing.rs
