[package]
name = "glerminal"
description = "A lightweight OpenGL terminal"
version = "0.1.8"
authors = ["Teascade <teascade@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["opengl", "terminal", "renderer", "console", "text"]
categories = ["rendering::engine"]
repository = "https://github.com/Teascade/glerminal"
documentation = "https://docs.rs/glerminal"

[badges]
travis-ci = { repository = "Teascade/glerminal", branch = "0.1.8" }

[features]
default = ["menu_systems", "parser"]

menu_systems = []

parser = ["regex"]

[dependencies]
glutin = "0.13"
gl = "0.10"
libc = "0.2"
png = "0.11"
sfl_parser = "1.3"

regex = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.4"
