[package]
name = "glerminal"
description = "A lightweight OpenGL terminal"
version = "0.2.1"
authors = ["Teascade <teascade@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["opengl", "terminal", "renderer", "console", "text"]
categories = ["rendering::engine"]
repository = "https://github.com/Teascade/glerminal"
documentation = "https://docs.rs/glerminal"
edition = "2018"

[badges]
travis-ci = { repository = "Teascade/glerminal", branch = "0.2.1" }

[features]
default = ["parser"]

menu_systems = []

parser = ["regex"]

[dependencies]
glutin = "0.16"
gl = "0.11"
libc = "0.2"
png = "0.14"
bmfont_parser = "0.2"

regex = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.6"

[package.metadata.docs.rs]
features = [ "menu_systems", "parser" ]
all-features = true

[[example]]
name = "input"

[[example]]
name = "menu_systems"
required-features = ["menu_systems"]

[[example]]
name = "menu_systems_grid"
required-features = ["menu_systems"]

[[example]]
name = "menu_systems_parser"
required-features = ["menu_systems", "parser"]

[[example]]
name = "multiple_text_buffers"

[[example]]
name = "performance_tester"

[[example]]
name = "text_buffer"

[[example]]
name = "text_parser"
required-features = ["parser"]

[[example]]
name = "window"


